wp-content/themes/giger-kms/src/sass/_front.scss
/*---------------------------------------------------------
 Global Layout (_front.scss)
-------------------------------------------------------- */
html {
	//font-size: 62.5%; //10px
	background-color: $color-white;	
}
body {
	background-color: $color-white;
	text-rendering: optimizeLegibility;	
	@include body-text();	
	& > svg { display: none; }	
}



a {
	text-decoration: none;
	color: $color-link-one;
	@include transition(all 0.3s);
	
	&:visited { color: $color-link-one; }
	&:hover, &:focus, &:active {
		color: $color-link-three;
	}
}

p {
	
	&:last-child { margin-bottom: 0; }	
}

p,ul,ol,dl,blockquote {
	@extend .break;
}

.svg-icon, .svg-pic {
	display: inline-block;
}

//title with normal weights
h1, h2, h3, h4, h5, h6 {
	font-weight: normal;
}


/** Layout structure **/
.container {
	width: 92%;
	max-width: $page_cont;
	margin: 0 auto;
	position: relative;	
}

.container-wide {
	@extend .container;
	max-width: $full_cont;
	width: 100%;
}

.container-narrow {
	@extend .container;
	max-width: 770px;
}

.search .site-content .container { max-width: 770px;}

// index
.heading {
	background: $color-white;
	padding: $gut 0;
	margin-bottom: $gut;
	text-align: center;
}

.section-title {
	@include header-title(head_title);	
}

.cards-holder {
	background: $color-secondary;
	padding-top: $gut;
	
	&.squared {
		background: transparent;
		padding-top: 0;
	}
}


//page with cards
.featured-head-image {
	@include vertical-image-header-fixed();
	&.container-extended {
		@include container-extended();
	}
}

.tpl-featured-bg {
	width: 100%;
	height: 100%;
	background-color: $color-secondary;
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center top;
}


.featured-head-text {
	background: $color-white;
		
	.featured-title {
		display: inline-block;
		background: #111;
		@include header-title(section);
		line-height: 1;
		color: $color-white;
		padding: 10px 20px;
		margin-bottom: $base;
	}
	
	.for-title,
	.fht-content {
		position: relative;
		top: -40px;
		border-bottom: 1px solid $color-border-normal;
		padding-bottom: $base;
	}
	
	.mobile-sharing {
		margin-top: $base;
	}
}

.bottom-content {
	margin-bottom: $gut*2;
	
	.container-wide {
		background: $color-secondary;
		padding-top: $gut;
		padding-bottom: $gut;
	}
	
	.page-section:last-of-type { margin-bottom: 0; }
}

/** Social panel **/
.bottom-bar {
	background: $color-link-three;
	padding: $base*1.3 0 $base*1.8;
	color: $color-link-two;	
	position: relative;
	margin-top: 110px;
	
	&:before {
		content: '';
		display: block;
		width: 100%;
		height: 48px;
		background-image: url('../img/wave-l.png');
		background-image: url('../img/wave-l.svg');
		background-repeat: repeat-x;
		background-position: left bottom;
		
		position: absolute;
		left:0;
		top: -65px;
	}
	
	h5 {
		@include header-title();
		margin-bottom: $base/2;
		color: $color-link-two;
	}
	
	.icons-label {
		@include for(medium-screens){
			display: none;
		}
		
		@include for(large-screens) {
			display: inline;
		}
	}
}




/** Footer **/
.home .site-footer {
    margin-top: $gut*1.85;
}

.site-footer {
	margin-top: $gut*2.5;
	@include body-text(summary);
	padding: $gut 0 $gut*1.5;
	background-color: $color-secondary;
	
	a[href *="tel"] { color: $color-text; }
	
	p {
		margin-bottom: $base/2;
		&:last-child { margin-bottom: 0; }
		a:hover {
			text-decoration: underline;
		}
	}
	
	.copy {
		max-width: 560px;		
		a { white-space: nowrap; }		
	}
	
	.widget-title {
		@include header-title(widget);		
		margin-bottom: $base;
		color: $color-text-black;
	}
	
	//layout
	.widget-area {
		display: flex;
		flex-flow: row wrap;
		justify-content: space-between;
		margin: 0 -1*$gut/2;		
	}
	
	.widget-bottom {
		flex: 0 0 auto;
		width: 100%;
		margin: 0 $gut/2 $gut;
		
		@include calc(width, '100% - 30px');
		
		@include for(small-screens){
			@include calc(width, '50% - 30px');
		}
		
		@include for(medium-screens){
			&:nth-of-type(1),
			&:nth-of-type(2),
			&:nth-of-type(3) {
				@include calc(width, '33.3% - 30px');
			}			
		}
		
		@include for(large-screens){
			&:nth-of-type(1),
			&:nth-of-type(2),
			&:nth-of-type(3) {
				@include calc(width, '25% - 30px');
			}			
			@include calc(width, '25% - 30px');			
		}
			
	}
	
	.hr {		
		color: transparent;
		display: block;
		border-bottom: 1px solid #EEA084;
		margin-bottom: $gut/2;
	}
	
	
	
	.textwidget {
		h4 {
			@include post-title(multiline);
			cursor: pointer;
		}
		
		p:last-of-type {
		    margin-top:19px;
		}
	}
	
	.widget_nav_menu {
		li { margin-bottom: 9px; }
		a {
			@include nav-text(menu_small);
			&:hover { text-decoration: underline; }
		}
	}
	
	.pic-vvc {
		width: 160px;
		height: 84px;
	}
}


//columns
.sf-cols {	
	display: flex;
	flex-flow: row wrap;
	justify-content: space-between;
	align-items: flex-start;
		
	@include for(small-screens) {
		flex-flow: row nowrap;
	}
		
	.sf-cols-8 {
		flex: 1 1 auto;
		width: 100%; 	
				
		@include for(small-screens) {
			flex: 1 1 auto;
			@include calc(width, '100% - 250px');
		}
		
		@include for(large-screens) {
			@include calc(width, '75% - 30px');
		}
		
	}
	.sf-cols-4 {
		flex: 0 0 auto;
		width: 100%;
		
		@include for(small-screens) { width: 200px;	}		
		@include for(large-screens) { @include calc(width, '25% - 30px'); }
	}
}

.te-st-bn {	
	position: relative;
	text-align: right;
	margin-top: $gut;
	
	@include for(small-screens) {
		margin-top: 0;
	}
	
	.rdc-icon {
		display: inline-block;
		width: 86px;
		height: 40px;
		fill: rgba(0,0,0, 0.99);
	}
	
	a {
		display: block;
		width: 100px;
		height: 48px;
		padding-top: 4px;
		text-align: center;
		box-sizing: border-box;		
		border-radius: 5px;
		border: 1px solid rgba(0,0,0, 0.99);
		@include transition(all 0.35s);
		
		&:hover, &:focus, &:active {
			background: rgba(255,255,255, 0.9);
			border-color: $color-white;
			box-shadow: none;
			margin: 0;
			.rdc-icon { fill:rgba(0,0,0, 1); }
		}
		
		position: absolute;
		top: 0;
		right: 0;
	}
		
	.support {
		display: inline-block;
		font-size: 11px;
		line-height: 14px;
		margin-right: 110px;
		padding-top: 8px;
		color: rgba(0,0,0, 0.99);
	}
}

